assets/css/custom.css
/* ... */
.selector-buttons {
	text-align: center;
	margin-top: 1em;
}


/* _layout/short.html */
header.short {
    background: url(../images/header-bg.svg) top center no-repeat;
    padding: 34px 0 0 0;
    min-height: 304px;
    background-position-y: -334px;
}

body.short {
    margin-top: 80px;
    padding-top: 40px;
}

body.short h2 {
    padding-bottom: 30px;
}


/* responsive screen breakpoints */
/* default is above on 1280px extra large */
/* based on https://purecss.io/grids/ */

/* 568px small */
@media only screen and (max-width: 35.5em) {

	.selector .options .option-label {
		width: 5em;
		font-size: 0.6em;
	    margin-top: 0.5em;
	}

	.selector .options .option {
		font-size: 0.9em;
	}

}

/* 768px med */
@media only screen and (max-width: 48em) {

    nav .menu {
        display: initial;
        cursor: pointer;
    }

    .show-height {
        height: 15em;
    }

    nav ul {
        display: block;
        text-align: center;
        margin-top: 1em;
        height: 0;
        overflow: hidden;
    }

    nav ul li {
        width: 100%;
        font-size: 1.2em;
        font-weight: 400;
        padding: 0.1em 1em;
        margin: 0;
    }

    .pure-u-md-1-3:nth-child(1) {
        padding-right: 0em;
    }

    .pure-u-md-1-3:nth-child(2) {
        padding-left: 0em;
        padding-right: 0em;
    }

    .pure-u-md-1-3:nth-child(3) {
        padding-left: 0em;
    }

    .pure-u-md-1-2:nth-child(1) {
        padding-right: 0em;
    }

    .pure-u-md-1-2:nth-child(2) {
        padding-left: 0em;
    }

    .blog-image {
        max-height: inherit;
    }


}

/* 1024 large */
@media only screen and (max-width: 64em)) {

}

